--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
             <div class="h-welcome">
-                <h2>welcome to adiansh gym</h2>
+                <h2>welcome to Patel's gym</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor et obcaecati reprehenderit, non in quaerat?
                 </p>
          </div>
